[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jinnang"
version = "0.2.1"
description = "A collection of utility functions."
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "Cheng Yanru", email = "yanru@cyanru.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pytz==2025.2",
    "python-dateutil==2.9.0.post0"
]

[project.urls]
"Homepage" = "https://github.com/yanrucheng/jinnang-utils"
"Bug Tracker" = "https://github.com/yanrucheng/jinnang-utils/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]

docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
]
